# matlab_c

./: README.md  output.txt  test.txt  test_and.txt
related_files/: Drawing9.eddx  Input.xlsx
test_functions/test_Calc/: v1_output_calc.ods  v1_output_calc.xlsx
test_functions/test_Red_Ybus/: Calc.cpp  H_header.h  Input_redybus.xlsx  Output_redybus.xlsx  Red_Ybus.cpp  Y_Sparse.cpp  chq_lim.cpp  form_jac.cpp  header.cpp  lftap.cpp  load_flow.cpp  loadflow.m  new_redYbus_out.xlsx  red_Ybus_output.ods  red_Ybus_output.xlsx  red_ybus.m  test  test.cpp  test_load_flow.cpp  test_red_ybus.cpp
test_functions/test_exc3_pss_tg/: test(_indx).rar
test_functions/test_exc3_pss_tg/s_simu_makefile/s_simu_test/: CMakeLists.txt  Makefile  compile_text  dependencies.dot
test_functions/test_exc3_pss_tg/s_simu_makefile/s_simu_test/depend/: outfile.ps
test_functions/test_exc3_pss_tg/s_simu_makefile/s_simu_test/include/: H_header.h
test_functions/test_exc3_pss_tg/s_simu_makefile/s_simu_test/matlab_codes/: mac_tra.m
test_functions/test_exc3_pss_tg/s_simu_makefile/s_simu_test/src/: Bus.cpp  Exc_st3.cpp  Mac_Sub.cpp  Mac_Tra.cpp  NBus.cpp  Pss.cpp  Pss_index.cpp  Y_switch.cpp  exc_indx.cpp  form_jac.cpp  load_flow.cpp  mac_em.cpp  nc_load.cpp  s_simu.cpp  test_s_simu.cpp  tg.cpp  tg_indx.cpp
test_functions/test_form_jac/: output.ods  output1.ods  output3.ods
test_functions/test_load_flow/: Output_(lftap).xlsx  input_loadflow.xlsx  line_flow_bug.xlsx  loadflow_output_1.ods  loadflow_output_1.xlsx  loadflow_output_2.ods  loadflow_output_2.xlsx  out_put_fixed_loadflow.xlsx
(+433 files in other folders)
